styles.css
* {
  margin: 0;
}
body {
  background: #efede8;
  font-family: Arial, Helvetica, sans-serif;
  overflow: hidden;
}
h1 {
  color: white;
  background-color: #098b8c;
  text-align: center;
  padding: 5vh;
  font-size: 1em;
}
table {
  border-collapse: collapse;
  margin: 5vh;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
}

tr th {
  color: #098b8c;
  background-color: #fff;
}
tr th,
td {
  padding: 1em;
  text-align: left;
}

td:first-child,
td:nth-child(3) {
  opacity: 0.3;
}

tr:not(:first-child) {
  background-color: #faf9f8;
  border-top: 1px solid #ededf0;
  font-size: 0.9rem;
}

tr:not(:first-child):hover {
  color: #098b8c;
  transition: 0.3s;
  cursor: pointer;
}

tr:not(:first-child):hover > td:first-child,
tr:not(:first-child):hover > td:nth-child(3) {
  opacity: 1;
  transition: 0.3s;
}
td:last-child {
  text-align: right;
}

.col1 {
  width: 5vw;
}
.col2 {
  width: 50vw;
}

@media all and (max-width: 760px) {
  table {
    margin: 0 !important;
  }
  td,
  th,
  tr {
    padding: 0 !important;
  }
  th {
    font-size: 0.7em;
  }
  td {
    font-size: 0.6em;
  }
}

